force-app/main/default/objects/Order_Return_c__c/Order_Return_c__c.object-meta.xml
<CustomObject>
    <label>order return</label>
    <nameField>
        <label>Order_Return__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>order returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>