force-app/main/default/objects/Order_Return_c__c/fields/Request_date__c.field-meta.xml
<CustomField>
    <fullName>Request_date__c</fullName>
    <label>Request date</label>
    <type>Date</type>
</CustomField>