force-app/main/default/objects/Order_Return_c__c/fields/Return_reason__c.field-meta.xml
<CustomField>
    <fullName>Return_reason__c</fullName>
    <label>Return reason</label>
    <type>TextArea</type>
</CustomField>